@@ -32,6 +32,17 @@
 			<post>http://groups.google.com/group/${googlecode.group.developers}/post</post>
 		</mailingList>
 	</mailingLists>
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>com.google.cloud</groupId>
+				<artifactId>libraries-bom</artifactId>
+				<version>26.4.0</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
 
 	<build>
 		<pluginManagement>
@@ -59,6 +70,13 @@
 				<plugin>
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>2.22.2</version>
+					<configuration>
+						<environmentVariables>
+							<FIRESTORE_HOST>127.0.0.1:8080</FIRESTORE_HOST>
+							<FIRESTORE_EMULATOR_HOST>127.0.0.1:8080</FIRESTORE_EMULATOR_HOST>
+							<GOOGLE_CLOUD_PROJECT>demo-boh</GOOGLE_CLOUD_PROJECT>
+						</environmentVariables>
+					</configuration>
 				</plugin>
 				<plugin>
 					<artifactId>maven-source-plugin</artifactId>
@@ -267,13 +285,29 @@
 					</jvmFlags>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>17</source>
+					<target>17</target>
+					<compilerArgs>--enable-preview</compilerArgs>
+					<annotationProcessorPaths combine.children="append">
+						<path>
+							<groupId>org.projectlombok</groupId>
+							<artifactId>lombok</artifactId>
+							<version>${lombok.version}</version>
+						</path>
+					</annotationProcessorPaths>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<maven.compiler.release>11</maven.compiler.release>
+		<maven.compiler.release>17</maven.compiler.release>
 		<argLine>-Xmx512m</argLine>
 		<wagon.scm.version>3.5.2</wagon.scm.version>
 		<wagon.scm.provider.version>1.13.0</wagon.scm.provider.version>
@@ -284,17 +318,16 @@
 		<license.includedGroups>org.apache.lucene</license.includedGroups>
 		<license.includedArtifacts>lucene-core</license.includedArtifacts>
 
-		<objectify.version>5.1.22</objectify.version>
 		<lucene.version>9.0.0</lucene.version>
 
 		<slf4j.version>1.7.13</slf4j.version>
 
-		<gae.plugin.version>2.4.3</gae.plugin.version>
+		<gae.plugin.version>2.4.4</gae.plugin.version>
 		<gae.version>1.9.90</gae.version>
 		<gae.application.name>${repository.project.name}</gae.application.name>
 		<gae.application.version>test</gae.application.version>
 		<gae.serverId>${repository.project.name}</gae.serverId>
-
+		<lombok.version>1.18.26</lombok.version>
 		<!-- custom -->
 		<repository.project.name>luceneappengine</repository.project.name>
 		<!-- googlecode -->
@@ -322,21 +355,20 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>javax.persistence</groupId>
-			<artifactId>persistence-api</artifactId>
-			<version>1.0.2</version>
+			<groupId>com.google.cloud</groupId>
+			<artifactId>google-cloud-firestore</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-api-1.0-sdk</artifactId>
-			<version>${gae.version}</version>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>${lombok.version}</version>
+			<scope>provided</scope>
 		</dependency>
-
-		<dependency>
-			<groupId>com.googlecode.objectify</groupId>
-			<artifactId>objectify</artifactId>
-			<version>${objectify.version}</version>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.googlecode.objectify</groupId>-->
+<!--			<artifactId>objectify</artifactId>-->
+<!--			<version>${objectify.version}</version>-->
+<!--		</dependency>-->
 
 		<dependency>
 			<groupId>org.apache.lucene</groupId>
@@ -387,20 +419,26 @@
 			<version>3.12.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.assertj</groupId>
+			<artifactId>assertj-core</artifactId>
+			<version>3.23.1</version>
+			<scope>test</scope>
+		</dependency>
 
 		<!-- GAE libraries for local testing as described here: http://code.google.com/appengine/docs/java/howto/unittesting.html -->
-		<dependency>
-			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-api-stubs</artifactId>
-			<version>${gae.version}</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>com.google.appengine</groupId>
-			<artifactId>appengine-testing</artifactId>
-			<version>${gae.version}</version>
-			<scope>test</scope>
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>com.google.appengine</groupId>-->
+<!--			<artifactId>appengine-api-stubs</artifactId>-->
+<!--			<version>${gae.version}</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
+<!--		<dependency>-->
+<!--			<groupId>com.google.appengine</groupId>-->
+<!--			<artifactId>appengine-testing</artifactId>-->
+<!--			<version>${gae.version}</version>-->
+<!--			<scope>test</scope>-->
+<!--		</dependency>-->
 	</dependencies>
 
 	<scm>
